--- a/src/main/resources/views/fxml/device/AddDeviceBefore.fxml
+++ b/src/main/resources/views/fxml/device/AddDeviceBefore.fxml
@@ -12,7 +12,7 @@
     <VBox layoutX="30" layoutY="30">
         <HBox spacing="10" style="-fx-padding: 0 0 0 70">
             <Label prefHeight="30.0" prefWidth="60.0" text="设备类型:" style="-fx-padding: 0 0 5 0"/>
-            <ComboBox fx:id="searchComboBox" id="jfxComboBox" prefWidth="200" promptText="选择用户等级">
+            <ComboBox fx:id="searchComboBox" id="jfxComboBox" prefWidth="200" promptText="选择设备类型">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
                     </FXCollections>
