--- a/src/main/resources/views/fxml/main/main.fxml
+++ b/src/main/resources/views/fxml/main/main.fxml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import com.jfoenix.transitions.hamburger.HamburgerBackArrowBasicTransition?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
-<?import java.lang.String?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXRippler?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXToolbar?>
+<?import com.jfoenix.controls.JFXTreeTableColumn?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.collections.FXCollections?>
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import com.jfoenix.validation.RequiredFieldValidator?>
-<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="root"
-           xmlns="http://javafx.com/javafx/2.2">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
+<StackPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <!-- Header -->
     <BorderPane>
         <top>
@@ -19,20 +24,17 @@
                         <Label>爱华自动监测</Label>
                     </leftItems>
                     <rightItems>
-                        <JFXRippler fx:id="optionsRippler" maskType="CIRCLE"
-                                    style="-fx-ripple-color:WHITE;">
+                        <JFXRippler fx:id="optionsRippler" maskType="CIRCLE" style="-fx-ripple-color:WHITE;">
                             <StackPane fx:id="optionsBurgerFile">
                                 <Label>文件</Label>
                             </StackPane>
                         </JFXRippler>
-                        <JFXRippler fx:id="optionsRippler1" maskType="CIRCLE"
-                                    style="-fx-ripple-color:WHITE;">
+                        <JFXRippler fx:id="optionsRippler1" maskType="CIRCLE" style="-fx-ripple-color:WHITE;">
                             <StackPane fx:id="optionsBurgerEdit">
                                 <Label>用户管理</Label>
                             </StackPane>
                         </JFXRippler>
-                        <JFXRippler fx:id="optionsRipplerOperate" maskType="CIRCLE"
-                                    style="-fx-ripple-color:WHITE;">
+                        <JFXRippler fx:id="optionsRipplerOperate" maskType="CIRCLE" style="-fx-ripple-color:WHITE;">
                             <StackPane fx:id="optionsBurgerOperate">
                                 <Label>系统设置</Label>
                             </StackPane>
@@ -44,26 +46,21 @@
 
         <!-- Content Area -->
         <center>
-            <VBox maxWidth="1000" maxHeight="600" spacing="10">
+            <VBox fx:id="tableVBox" maxHeight="600" maxWidth="1000" minWidth="1000" spacing="10">
                 <children>
                     <HBox alignment="CENTER">
                         <children>
-                                    <JFXButton fx:id="changeMeasure" prefWidth="80" prefHeight="30" buttonType="RAISED" text="添加测点"
-                                               styleClass="custom-jfx-button-raised"/>
-                            <HBox fx:id="disableHBox" spacing="20" style="-fx-padding: 0 0 0 20;" disable="true">
-                                <JFXButton prefWidth="80" prefHeight="30" buttonType="RAISED" text="编辑测点"
-                                           styleClass="custom-jfx-button-raised"/>
-                                <JFXButton fx:id="deleteButton" prefWidth="80" prefHeight="30" buttonType="RAISED" text="删除测点"
-                                           styleClass="custom-jfx-button-raised" style="-fx-text-fill: #D34336"/>
-                                <JFXButton prefWidth="80" prefHeight="30" buttonType="RAISED" text="开始连接"
-                                           styleClass="custom-jfx-button-raised"/>
-                                <JFXButton prefWidth="80" prefHeight="30" buttonType="RAISED" text="断开连接"
-                                           styleClass="custom-jfx-button-raised"/>
+                                    <JFXButton fx:id="changeMeasure" buttonType="RAISED" prefHeight="30" prefWidth="80" styleClass="custom-jfx-button-raised" text="添加测点" />
+                            <HBox fx:id="disableHBox" disable="true" spacing="20" style="-fx-padding: 0 0 0 20;">
+                                <JFXButton buttonType="RAISED" prefHeight="30" prefWidth="80" styleClass="custom-jfx-button-raised" text="编辑测点" />
+                                <JFXButton fx:id="deleteButton" buttonType="RAISED" prefHeight="30" prefWidth="80" style="-fx-text-fill: #D34336" styleClass="custom-jfx-button-raised" text="删除测点" />
+                                <JFXButton buttonType="RAISED" prefHeight="30" prefWidth="80" styleClass="custom-jfx-button-raised" text="开始连接" />
+                                <JFXButton buttonType="RAISED" prefHeight="30" prefWidth="80" styleClass="custom-jfx-button-raised" text="断开连接" />
                             </HBox>
                             <StackPane HBox.hgrow="ALWAYS">
-                                <HBox style="-fx-padding: 5 40 0 0" spacing="100" maxWidth="500" maxHeight="300" alignment="BASELINE_CENTER">
+                                <HBox alignment="BASELINE_CENTER" maxHeight="300" maxWidth="500" spacing="100" style="-fx-padding: 5 40 0 0">
                                     <VBox spacing="20">
-                                        <JFXComboBox fx:id="searchComboBox" id="jfxComboBox" prefWidth="120" promptText="选择测点类型">
+                                        <JFXComboBox id="jfxComboBox" fx:id="searchComboBox" prefWidth="120" promptText="选择连接状态">
                                             <items>
                                                 <FXCollections fx:factory="observableArrayList">
                                                     <Label>已全部连接</Label>
@@ -74,29 +71,22 @@
                                         </JFXComboBox>
                                     </VBox>
                                 </HBox>
-                                <StackPane StackPane.alignment="CENTER_RIGHT" maxWidth="160">
-                                    <JFXTextField fx:id="searchField" promptText="请输入测点编号或测点名称"></JFXTextField>
+                                <StackPane maxWidth="160" StackPane.alignment="CENTER_RIGHT">
+                                    <JFXTextField fx:id="searchField" promptText="请输入测点编号或测点名称" />
                                 </StackPane>
                             </StackPane>
-                            <JFXButton fx:id="clearSearch" prefWidth="50" prefHeight="30" text="清除" style="-fx-font-size: 12.0px;"/>
+                            <JFXButton fx:id="clearSearch" prefHeight="30" prefWidth="50" style="-fx-font-size: 12.0px;" text="清除" />
                         </children>
                     </HBox>
                     <JFXTreeTableView fx:id="treeTableView">
                         <columns>
-                            <JFXTreeTableColumn fx:id="measureCode" text="测点编码" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
-                            <JFXTreeTableColumn fx:id="measureName" text="测点名称" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
-                            <JFXTreeTableColumn fx:id="linkState" text="连接状态" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
-                            <JFXTreeTableColumn fx:id="dataTime" text="时间" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
-                            <JFXTreeTableColumn fx:id="data" text="数值" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
-                            <JFXTreeTableColumn fx:id="address" text="地理位置" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
-                            <JFXTreeTableColumn fx:id="other" text="其他参数" prefWidth="133"
-                                                resizable="true"></JFXTreeTableColumn>
+                            <JFXTreeTableColumn fx:id="measureCode" prefWidth="130" resizable="false" sortable="false" text="测点编码" />
+                            <JFXTreeTableColumn fx:id="measureName" prefWidth="130" resizable="false" sortable="false" text="测点名称" />
+                            <JFXTreeTableColumn fx:id="linkState" prefWidth="100" resizable="false" sortable="false" text="连接状态" />
+                            <JFXTreeTableColumn fx:id="dataTime" prefWidth="128" resizable="false" sortable="false" text="时间" />
+                            <JFXTreeTableColumn fx:id="data" prefWidth="100" resizable="false" sortable="false" text="数值" />
+                            <JFXTreeTableColumn fx:id="address" prefWidth="160" resizable="false" sortable="false" text="地理位置" />
+                            <JFXTreeTableColumn fx:id="other" prefWidth="250" resizable="false" sortable="false" text="其他参数" />
                         </columns>
                     </JFXTreeTableView>
                 </children>
