--- a/src/main/resources/views/fxml/system/MoreInfo.fxml
+++ b/src/main/resources/views/fxml/system/MoreInfo.fxml
@@ -7,17 +7,18 @@
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import com.jfoenix.controls.JFXTreeTableColumn?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="moreInfoPopup"
-        xmlns="http://javafx.com/javafx/2.2">
-    <JFXTreeTableView fx:id="treeTableView">
-        <columns>
-            <JFXTreeTableColumn fx:id="firstNameColumn"
-                                minWidth="133" text="First Name" prefWidth="133"
-                                resizable="true"></JFXTreeTableColumn>
-            <JFXTreeTableColumn fx:id="lastNameColumn" text="Last Name"
-                                minWidth="133" resizable="true"></JFXTreeTableColumn>
-            <JFXTreeTableColumn fx:id="ageColumn" text="Age"
-                                minWidth="133" resizable="true"></JFXTreeTableColumn>
-        </columns>
-    </JFXTreeTableView>
+           xmlns="http://javafx.com/javafx/2.2" prefWidth="1000" prefHeight="300">
+        <JFXTreeTableView fx:id="treeTableView">
+            <columns>
+                <JFXTreeTableColumn fx:id="deviceCode" prefWidth="130" resizable="false" sortable="false" text="设备编码"/>
+                <JFXTreeTableColumn fx:id="deviceType" prefWidth="130" resizable="false" sortable="false" text="设备类型"/>
+                <JFXTreeTableColumn fx:id="linkState" prefWidth="100" resizable="false" sortable="false" text="连接状态"/>
+                <JFXTreeTableColumn fx:id="dataTime" prefWidth="128" resizable="false" sortable="false" text="时间"/>
+                <JFXTreeTableColumn fx:id="data" prefWidth="100" resizable="false" sortable="false" text="数值"/>
+                <JFXTreeTableColumn fx:id="linkPort" prefWidth="160" resizable="false" sortable="false" text="连接端口"/>
+                <JFXTreeTableColumn fx:id="address" prefWidth="250" resizable="false" sortable="false" text="其他参数"/>
+            </columns>
+        </JFXTreeTableView>
 </StackPane>
