--- a/src/main/resources/views/fxml/user/editDownUser.fxml
+++ b/src/main/resources/views/fxml/user/editDownUser.fxml
@@ -37,7 +37,7 @@
                         </VBox>
                         <HBox GridPane.columnIndex="1" GridPane.rowIndex="4" layoutX="50" layoutY="100">
                             <padding><Insets left="140.0" top="5.0"/></padding>
-                            <JFXButton text="分配测点" style="-fx-font-size: 13;-fx-background-color: blue;"/>
+                            <JFXButton fx:id="undistributeMeasure" text="分配测点" style="-fx-font-size: 13;-fx-background-color: blue;"/>
                         </HBox>
                     </children>
                 </GridPane>
