--- a/src/main/resources/views/fxml/user/UserInfo.fxml
+++ b/src/main/resources/views/fxml/user/UserInfo.fxml
@@ -5,16 +5,14 @@
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.image.ImageView?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="1000.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="1000.0"
             prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121">
     <GridPane layoutY="50" layoutX="50">
         <padding>
@@ -22,23 +20,22 @@
         </padding>
         <children>
             <Label prefHeight="25.0" prefWidth="60.0" text="用户名称:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-            <TextField fx:id="username" layoutX="5.0" layoutY="5.0" prefHeight="15.0" GridPane.columnIndex="1"
+            <Label fx:id="userName" layoutX="5.0" layoutY="5.0" prefHeight="15.0" GridPane.columnIndex="1"
                        GridPane.rowIndex="1"/>
             <Label prefHeight="25.0" prefWidth="60.0" text="类       型:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-            <TextField fx:id="type" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <Label fx:id="userType" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
             <Label prefHeight="25.0" prefWidth="60.0" text="姓       名:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-            <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <Label fx:id="nickName" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
             <Label prefHeight="25.0" prefWidth="60.0" text="电话号码:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-            <TextField fx:id="telephone" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <Label fx:id="phone" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
             <Label prefHeight="25.0" prefWidth="60.0" text="职       业:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-            <TextField fx:id="zhiye" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+            <Label fx:id="occupation" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
             <Label prefHeight="25.0" prefWidth="60.0" text="工作单位:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
-            <TextField fx:id="workAddress" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <Label fx:id="company" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
         </children>
     </GridPane>
-    <VBox layoutX="370" layoutY="150">
-        <Label text="照        片:"/>
-        <ImageView fx:id="photo" fitHeight="100.0" fitWidth="100.0">
+    <VBox layoutX="465" layoutY="110">
+        <ImageView fx:id="headFileName" fitHeight="100.0" fitWidth="100.0">
         </ImageView>
     </VBox>
     <VBox layoutX="450" layoutY="230" maxHeight="50" maxWidth="600" spacing="10">
@@ -90,7 +87,7 @@
                     <JFXTreeTableColumn fx:id="downname" minWidth="133" resizable="true" text="姓名"/>
                     <JFXTreeTableColumn fx:id="status" minWidth="133" resizable="true" text="状态"/>
                     <JFXTreeTableColumn fx:id="downtype" minWidth="133" resizable="true" text="类型"/>
-                    <JFXTreeTableColumn fx:id="phone" minWidth="133" resizable="true" text="电话"/>
+                    <JFXTreeTableColumn fx:id="downphone" minWidth="133" resizable="true" text="电话"/>
                 </columns>
             </JFXTreeTableView>
         </children>
