搜索下级用户和修改密码

--- a/src/main/resources/views/fxml/user/findDownUser.fxml
+++ b/src/main/resources/views/fxml/user/findDownUser.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" prefHeight="300.0" prefWidth="400.0">
     <BorderPane>
         <center>
@@ -21,11 +22,12 @@
                 <TextField fx:id="downName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <Label prefHeight="30.0" prefWidth="60.0" text="电话号码:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                 <TextField fx:id="downTelephone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Text fx:id="actiontarget" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
             </children>
         </GridPane>
                 <Label style="-fx-padding: 20 0 0 85">提示：可以输入一项或者多项查询条件</Label>
                 <HBox style="-fx-padding: 20 0 0 180;-fx-font-size: 14">
-                    <JFXButton fx:id="findDownUsers" buttonType="RAISED" style="-fx-background-color: green;" styleClass="custom-jfx-button-raised" prefHeight="30"  text="搜索"/>
+                    <JFXButton fx:id="comitFindDownUsers" buttonType="RAISED" style="-fx-background-color: green;" styleClass="custom-jfx-button-raised" prefHeight="30"  text="搜索"/>
                 </HBox>
         </VBox>
         </center>
