--- a/src/main/resources/views/fxml/user/editPassword.fxml
+++ b/src/main/resources/views/fxml/user/editPassword.fxml
@@ -9,6 +9,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx" prefHeight="300.0" prefWidth="500.0">
     <BorderPane>
         <center>
@@ -16,13 +18,14 @@
                 <GridPane style="-fx-padding: 30 0 0 80">
                     <children>
                         <Label prefHeight="30.0" prefWidth="60.0" text="原  密  码:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                        <TextField fx:id="downUserName" layoutX="5.0" layoutY="5.0" prefHeight="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <PasswordField fx:id="oldPassword" layoutX="5.0" layoutY="5.0" prefHeight="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label prefHeight="30.0" prefWidth="60.0" text="密      码:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                        <TextField fx:id="downName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <PasswordField fx:id="newPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label GridPane.columnIndex="2" GridPane.rowIndex="2">* 输入6到20位数字和字母的组合</Label>
                         <Label prefHeight="30.0" prefWidth="60.0" text="重复密码:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                        <TextField fx:id="downTelephone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <PasswordField fx:id="againPassword" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label GridPane.columnIndex="2" GridPane.rowIndex="3">*</Label>
+                        <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
                     </children>
                 </GridPane>
                 <Label style="-fx-padding: 20 0 0 155">提示：*为必填项</Label>
